* SERVER: Make a middleware that requires the person to be logged in  (silly idea)   * SERVER: Understand how the error management works, discovered that throw(err) is the very same as next(err) for the catch{} there   * SERVER: Change page middleware so that it redirects automatically, without getting the actual routes methods to do it

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "express": "3.x",
     "mongodb": "*",
     "mongoose": "*",
-    "jade": "*"
-    "node-uuid": "*"
+    "jade": "*",
+    "hat": "*"
   }
 }
