--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "mongodb": "*",
     "mongoose": "*",
     "jade": "*",
-    "hat": "*"
-    "connect-mongodb": "*"
+    "hat": "*",
+    "connect-mongodb": "*",
+    "send": "*"
   }
 }
