--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "booking-dojo",
-  "description": "Booking dojo app",
+  "name": "hotplate",
+  "description": "Hotplate SaaS development framework",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "express": "3.x",
     "mongodb": "*",
-    "mongoose": "*",
     "jade": "*",
     "hat": "*",
     "connect-mongodb": "*",
