--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-mongodb": "*",
     "send": "*",
     "bcrypt": "*",
-    "hotplate": "*"
+    "hotplate": "*",
+    "simpledeclare": "*"
   }
 }
