--- a/package.json
+++ b/package.json
@@ -2,16 +2,9 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "express": "3.x",
-    "mongodb": "*",
-    "jade": "*",
-    "hat": "*",
-    "connect-mongodb": "*",
-    "send": "*",
-    "bcrypt": "*",
-    "hotplate": "*",
-    "simpledeclare": "*"
+    "async": "*"
   }
 }
