--- a/package.json
+++ b/package.json
@@ -1,10 +1,62 @@
 {
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
-  "version": "0.0.1",
+  "main" : "./hotplate.js",
+  "version": "0.0.15",
   "private": false,
   "dependencies": {
     "express": "3.x",
-    "async": "*"
-  }
+    "async": "*",
+    "send": "*",
+
+    "hotCoreClientFiles": "*",
+    "hotCoreCommonValidators": "*",
+    "hotCoreError": "*",
+    "hotCoreHandyCss": "*",
+    "hotCorePage": "*",
+    "hotCoreProtocol": "*",
+    "hotCoreResUtils": "*",
+    "hotCoreServerLogger": "*",
+    "hotCoreSharedCode": "*",
+    "hotCoreStoresVars": "*",
+    "hotDojo": "*",
+    "hotDojoAppContainer": "*",
+    "hotDojoAuth": "*",
+    "hotDojoCometMessages": "*",
+    "hotDojoGlobalAlertBar": "*",
+    "hotDojoLogger": "*",
+    "hotDojoStores": "*",
+    "hotDojoSubmit": "*",
+    "hotDojoWidgetHooks": "*",
+    "hotDojoWidgets": "*",
+    "hotMongoAuth": "*",
+    "hotMongoCometMessages": "*",
+    "hotMongoLogger": "*"
+
+  },
+  "bundleDependencies": [
+    "hotCoreClientFiles",
+    "hotCoreCommonValidators",
+    "hotCoreError",
+    "hotCoreHandyCss",
+    "hotCorePage",
+    "hotCoreProtocol",
+    "hotCoreResUtils",
+    "hotCoreServerLogger",
+    "hotCoreSharedCode",
+    "hotCoreStoresVars",
+    "hotDojo",
+    "hotDojoAppContainer",
+    "hotDojoAuth",
+    "hotDojoCometMessages",
+    "hotDojoGlobalAlertBar",
+    "hotDojoLogger",
+    "hotDojoStores",
+    "hotDojoSubmit",
+    "hotDojoWidgetHooks",
+    "hotDojoWidgets",
+    "hotMongoAuth",
+    "hotMongoCometMessages",
+    "hotMongoLogger"
+  ]
 }
