Added mew hotCoreJsonRestStores module to the list of embedded modules

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hotCoreError": "*",
     "hotCoreHandyCss": "*",
     "hotCorePage": "*",
+    "hotCoreJsonRestStores": "*",
     "hotCoreProtocol": "*",
     "hotCoreResUtils": "*",
     "hotCoreServerLogger": "*",
