--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hotDojo": "*",
     "hotDojoAppContainer": "*",
     "hotDojoAuth": "*",
+    "hotDojoAuth2": "*",
     "hotDojoCometMessages": "*",
     "hotDojoDgridWidgets": "*",
     "hotDojoGlobalAlertBar": "*",
