--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "hotDojoWidgets": "*",
     "hotMongoAuth": "*",
     "hotMongoCometMessages": "*",
-    "hotMongoLogger": "*"
+    "hotMongoLogger": "*",
+    "hotCoreMultiHome": "*"
   },
   "bundleDependencies": [
     "hotCoreClientFiles",
@@ -59,7 +60,8 @@
     "hotDojoWidgets",
     "hotMongoAuth",
     "hotMongoCometMessages",
-    "hotMongoLogger"
+    "hotMongoLogger",
+    "hotCoreMultiHome"
   ],
   "subdomain": "mercmobily-hotplate",
   "scripts": {
