Redone the way stores are defined, they are now created by a hook. Everything is much cleaner, no duplication in URLs etc.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "hotCoreResUtils": "*",
     "hotCoreServerLogger": "*",
     "hotCoreSharedCode": "*",
-    "hotCoreStoresVars": "*",
+    "hotCoreStoreVars": "*",
     "hotDojo": "*",
     "hotDojoAppContainer": "*",
     "hotDojoAuth": "*",
@@ -46,7 +46,7 @@
     "hotCoreResUtils",
     "hotCoreServerLogger",
     "hotCoreSharedCode",
-    "hotCoreStoresVars",
+    "hotCoreStoreVars",
     "hotDojo",
     "hotDojoAppContainer",
     "hotDojoAuth",
