More work. Planned the rewrite of messages, converted hotMongoLogger to new generic store architecture. Next: make the application work, rewrite messaging system following TODO I wrote, and... then I will be back to where I was before deciding to write the new store architecture

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "hotDojoWidgetHooks": "*",
     "hotDojoWidgets": "*",
     "hotMongoAuth": "*",
-    "hotMongoCometMessages": "*",
-    "hotMongoLogger": "*",
+    "hotCoreCometMessages": "*",
+    "hotCoreStoreLogger": "*",
     "hotCoreMultiHome": "*"
   },
   "bundleDependencies": [
@@ -59,8 +59,8 @@
     "hotDojoWidgetHooks",
     "hotDojoWidgets",
     "hotMongoAuth",
-    "hotMongoCometMessages",
-    "hotMongoLogger",
+    "hotCoreCometMessages",
+    "hotCoreStoreLogger",
     "hotCoreMultiHome"
   ],
   "subdomain": "mercmobily-hotplate",
