Fixed small bugs after the huge changeover to new events library

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "express": "3.x",
     "async": "*",
     "send": "*",
-    "hotCore",
+    "hotCore": "*",
     "hotCoreClientFiles": "*",
     "hotCoreCommonValidators": "*",
     "hotCoreError": "*",
