Add tracer, so that logging is much much saner

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "3.x",
     "async": "*",
     "send": "*",
+    "tracer": "*",
     "hotCore": "*",
     "hotCoreClientFiles": "*",
     "hotCoreCommonValidators": "*",
