Created dependency list, renamed hotCoreProtocol into hotCoreErrorProtocol

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "hotCoreHandyCss": "*",
     "hotCorePage": "*",
     "hotCoreJsonRestStores": "*",
-    "hotCoreProtocol": "*",
+    "hotCoreErrorProtocol": "*",
     "hotCoreServerLogger": "*",
     "hotCoreSharedCode": "*",
     "hotCoreStoreVars": "*",
@@ -43,7 +43,7 @@
     "hotCoreError",
     "hotCoreHandyCss",
     "hotCorePage",
-    "hotCoreProtocol",
+    "hotCoreErrorProtocol",
     "hotCoreServerLogger",
     "hotCoreSharedCode",
     "hotCoreStoreVars",
