--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "private": false,
   "repository": {
     "type": "git",
@@ -15,14 +15,17 @@
     "eventemittercollector": "0.3.x",
     "hotCore": "*",
     "hotCoreClientFiles": "*",
+    "hotCoreComet": "*",
     "hotCoreCommonValidators": "*",
     "hotCoreError": "*",
-    "hotCoreHandyCss": "*",
-    "hotCorePage": "*",
-    "hotCoreJsonRestStores": "*",
     "hotCoreErrorProtocol": "*",
+    "hotCoreHandyCss": "*",
+    "hotCoreJsonRestStores": "*",
+    "hotCoreMultiHome": "*",
+    "hotCorePage": "*",
     "hotCoreServerLogger": "*",
     "hotCoreSharedCode": "*",
+    "hotCoreStoreLogger": "*",
     "hotCoreStoreVars": "*",
     "hotDojo": "*",
     "hotDojoAdd": "*",
@@ -35,21 +38,32 @@
     "hotDojoStores": "*",
     "hotDojoSubmit": "*",
     "hotDojoWidgets": "*",
-    "hotCoreComet": "*",
-    "hotCoreStoreLogger": "*",
-    "hotCoreMultiHome": "*"
+    "allhttperrors": "0.3.x",
+    "jsonreststores": "0.3.x",
+    "simpledeclare": "0.3.x",
+    "simpleschema": "0.3.x",
+    "simpledblayer": "0.3.x",
+    "passport": "0.1.x",
+    "pasport-local": "0.1.x",
+    "passport-facebook": "1.x",
+    "hat": "0.3.x",
+    "bcrypt": "0.3.x",
+
   },
   "bundleDependencies": [
     "hotCore",
     "hotCoreClientFiles",
+    "hotCoreComet",
     "hotCoreCommonValidators",
     "hotCoreError",
-    "hotCoreHandyCss",
-    "hotCorePage",
-    "hotCoreJsonRestStores",
     "hotCoreErrorProtocol",
+    "hotCoreHandyCss",
+    "hotCoreJsonRestStores",
+    "hotCoreMultiHome",
+    "hotCorePage",
     "hotCoreServerLogger",
     "hotCoreSharedCode",
+    "hotCoreStoreLogger",
     "hotCoreStoreVars",
     "hotDojo",
     "hotDojoAdd",
@@ -61,9 +75,6 @@
     "hotDojoLogger",
     "hotDojoStores",
     "hotDojoSubmit",
-    "hotDojoWidgets",
-    "hotCoreComet",
-    "hotCoreStoreLogger",
-    "hotCoreMultiHome"
+    "hotDojoWidgets"
   ]
 }
