--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "pasport-local": "0.1.x",
     "passport-facebook": "1.x",
     "hat": "0.3.x",
-    "bcrypt": "0.3.x",
-
+    "bcrypt": "0.3.x"
   },
   "bundleDependencies": [
     "hotCore",
