--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.9",
+  "version": "0.3.10",
   "private": false,
   "repository": {
     "type": "git",
@@ -44,10 +44,10 @@
     "simpleschema": "0.3.x",
     "simpledblayer": "0.3.x",
     "passport": "0.1.x",
-    "pasport-local": "0.1.x",
+    "passport-local": "0.1.x",
     "passport-facebook": "1.x",
-    "hat": "0.3.x",
-    "bcrypt": "0.3.x"
+    "hat": "0.0.x",
+    "bcrypt": "0.7.x"
   },
   "bundleDependencies": [
     "hotCore",
