Fixed check for session, both variables are changed to toString()

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "private": false,
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
     "deepobject": "0.3.x",
     "eventemittercollector": "0.3.x",
     "hotCore": "*",
+    "hotCoreAuth": "*",
     "hotCoreClientFiles": "*",
     "hotCoreComet": "*",
     "hotCoreCommonValidators": "*",
@@ -25,7 +26,10 @@
     "hotCorePage": "*",
     "hotCoreServerLogger": "*",
     "hotCoreSharedCode": "*",
+    "hotCoreStoreConfig": "*",
+    "hotCoreStoreExposer": "*",
     "hotCoreStoreLogger": "*",
+    "hotCoreStoreRegistry": "*",
     "hotCoreStoreVars": "*",
     "hotDojo": "*",
     "hotDojoAdd": "*",
@@ -34,7 +38,9 @@
     "hotDojoComet": "*",
     "hotDojoDgridWidgets": "*",
     "hotDojoGlobalAlertBar": "*",
+    "hotDojoGlobals": "*",
     "hotDojoLogger": "*",
+    "hotDojoStoreConfig": "*",
     "hotDojoStores": "*",
     "hotDojoSubmit": "*",
     "hotDojoWidgets": "*",
@@ -51,6 +57,7 @@
   },
   "bundleDependencies": [
     "hotCore",
+    "hotCoreAuth",
     "hotCoreClientFiles",
     "hotCoreComet",
     "hotCoreCommonValidators",
@@ -62,7 +69,10 @@
     "hotCorePage",
     "hotCoreServerLogger",
     "hotCoreSharedCode",
+    "hotCoreStoreConfig",
+    "hotCoreStoreExposer",
     "hotCoreStoreLogger",
+    "hotCoreStoreRegistry",
     "hotCoreStoreVars",
     "hotDojo",
     "hotDojoAdd",
@@ -71,7 +81,9 @@
     "hotDojoComet",
     "hotDojoDgridWidgets",
     "hotDojoGlobalAlertBar",
+    "hotDojoGlobals",
     "hotDojoLogger",
+    "hotDojoStoreConfig",
     "hotDojoStores",
     "hotDojoSubmit",
     "hotDojoWidgets"
