--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.11",
+  "version": "0.3.12",
   "private": false,
   "repository": {
     "type": "git",
@@ -53,7 +53,9 @@
     "passport-local": "0.1.x",
     "passport-facebook": "1.x",
     "hat": "0.0.x",
-    "bcrypt": "0.7.x"
+    "bcrypt": "0.7.x",
+    "send": "0.1.x"
+
   },
   "bundleDependencies": [
     "hotCore",
