Added shared validators as a distinct module

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.13",
+  "version": "0.3.14",
   "private": false,
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "hotCorePage": "*",
     "hotCoreServerLogger": "*",
     "hotCoreSharedCode": "*",
+    "hotCoreSharedValidators": "*",
     "hotCoreStoreConfig": "*",
     "hotCoreStoreExposer": "*",
     "hotCoreStoreLogger": "*",
@@ -71,6 +72,7 @@
     "hotCorePage",
     "hotCoreServerLogger",
     "hotCoreSharedCode",
+    "hotCoreSharedValidators",
     "hotCoreStoreConfig",
     "hotCoreStoreExposer",
     "hotCoreStoreLogger",
