--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hotCoreSharedValidators": "*",
     "hotCoreStoreConfig": "*",
     "hotCoreStoreExposer": "*",
+    "hotCoreStoreIndexer": "*",
     "hotCoreStoreLogger": "*",
     "hotCoreStoreRegistry": "*",
     "hotCoreStoreVars": "*",
@@ -75,6 +76,7 @@
     "hotCoreSharedValidators",
     "hotCoreStoreConfig",
     "hotCoreStoreExposer",
+    "hotCoreStoreIndexer",
     "hotCoreStoreLogger",
     "hotCoreStoreRegistry",
     "hotCoreStoreVars",
