Added Jade as a module usable in Dojo with a mixin for templates

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "hotDojoDgridWidgets": "*",
     "hotDojoGlobalAlertBar": "*",
     "hotDojoGlobals": "*",
+    "hotDojoJade": "*",
     "hotDojoLogger": "*",
     "hotDojoStoreConfig": "*",
     "hotDojoStores": "*",
@@ -88,6 +89,7 @@
     "hotDojoDgridWidgets",
     "hotDojoGlobalAlertBar",
     "hotDojoGlobals",
+    "hotDojoJade",
     "hotDojoLogger",
     "hotDojoStoreConfig",
     "hotDojoStores",
