Autobox taken out, no longer using it

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hotDojo": "*",
     "hotDojoAdd": "*",
     "hotDojoAppContainer": "*",
+    "hotDojoAutobox": "*",
     "hotDojoAuth": "*",
     "hotDojoComet": "*",
     "hotDojoDgridWidgets": "*",
