--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deepobject": "0.3.x",
     "eventemittercollector": "0.3.x",
     "debug": "2.x",
+    "crypto": "0.0.x",
     "hotCore": "*",
     "hotCoreAuth": "*",
     "hotCoreClientFiles": "*",
@@ -61,7 +62,8 @@
     "send": "0.1.x",
     "twilio": "1.7.x",
     "nodemailer": "1.x",
-    "imap": "0.8.x"
+    "imap": "0.8.x",
+    "request": "2.x"
   },
   "bundleDependencies": [
     "hotCore",
