Added Google caja to dependencies

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "twilio": "1.7.x",
     "nodemailer": "1.x",
     "imap": "0.8.x",
-    "request": "2.x"
+    "request": "2.x",
+    "sanitize-caja": "0.1.x"
   },
   "bundleDependencies": [
     "hotCore",
