--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.38",
+  "version": "0.3.39,
   "private": false,
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "hotCoreStoreLogger": "*",
     "hotCoreStoreRegistry": "*",
     "hotCoreStoreVars": "*",
+    "hotCoreTransport": "*",
     "hotDojo": "*",
     "hotDojoAdd": "*",
     "hotDojoAppContainer": "*",
@@ -90,6 +91,7 @@
     "hotCoreStoreLogger",
     "hotCoreStoreRegistry",
     "hotCoreStoreVars",
+    "hotCoreTransport",
     "hotDojo",
     "hotDojoAdd",
     "hotDojoAppContainer",
