--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.39,
+  "version": "0.3.39",
   "private": false,
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "hotDojoAuth": "*",
     "hotDojoComet": "*",
     "hotDojoDgridWidgets": "*",
+    "hotDojoExtras": "*",
     "hotDojoGlobalAlertBar": "*",
     "hotDojoGlobals": "*",
     "hotDojoLogger": "*",
@@ -98,6 +99,7 @@
     "hotDojoAuth",
     "hotDojoComet",
     "hotDojoDgridWidgets",
+    "hotDojoExtras",
     "hotDojoGlobalAlertBar",
     "hotDojoGlobals",
     "hotDojoLogger",
