--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.54",
+  "version": "0.3.55",
   "private": false,
   "repository": {
     "type": "git",
@@ -80,5 +80,16 @@
     "hotCoreStoreVars",
     "hotCoreTransport",
     "hotClientDojo"
-  ]
+  ],
+  "readme": "Welcome to Hotplate\n===================\n\nHotplate is a framework that allows you to create 201X software in no time.\nBy 201X software I mean software that has the following features:\n\n* **One page**. One page application, with ony minimal information transferred from the client to the server\n* **Ready-to-go Advanced authentication**. Login, recover, register, manage, resume using any authentication method (Facebook, login/pass pair, etc.) and where no method is \"favoured\" or \"special\" (not even login/password)\n* **JSON REST stores** for all data access; the client displays information is the most user-friendly possibly way and handles forms, while the server  provides a bunch of secure data stores that are JSON-REST compatible\n* **Live information**. Have live information and forms. This means that if you have three tabs open, and change your user photo in one tab, the other two tabs will get updated with the new photo as well. Other users logged in and display your user will get the update right away. Forms need to be live as well: if you are viewing a form, and another user changes the information, your form needs to get reloaded or warn you\n* **Client independent**. The develpment world today has Angular, Backbone, Knockout, Ember, Polymer, Dojo... and more. Hotplate defines client _blueprints_, which are the required client-side components to work well with Hotplate and create \"life applications\" (see: if your username changes, it will have to change anywhere where it's it's displayed in the application)\n* **Modularity**. A piece of software should be written as a bunch of independent modules, each one of them requiring specific CSS (included in the page), specific JSes, specific Javascript frameworks, etc.\n* **Resilience**. Network and error resiliance; ff anything really bad happens, the application must not stop. Instead, it will tell the user that something network-wise went wrong\n* **Security**. Implementing new stores needs to be safe and secure _by default_. It needs to be easy to write permission-granting routines for specific stores\n* **Multi-homing**. Software needs to be multi-home ready, in a world where SaaS is king and people want to have their own little islands.\n* **Communication** with users via email, SMS,  and whatever the world throws at us\n* **Established patterns**. There needs to be a common way to carry out a common task.\n* **API-ready**. Having an API needs to be as simple as flicking a switch. Rewriting the software logic for the API is the wrong route.\n* **Logging**. Everything, good or bad, needs to be logged\n\nI realise that in 202X (that is, 2020 to 2030) writing software will be different. What is cool now, will be taken 100% for granted in 2025. Or maybe Javascript will be dead. I don't know, and I frankly don't care. I wrote Hotplate because I felt that this is what software _should_ be in 201X -- which is now.\n\nTo know more about this great module, have a look at [Hotplate's official documentation](http://www.hotplatejs.com/docs).\n",
+  "readmeFilename": "README.md",
+  "gitHead": "4b2d0428654198ab9625cfaa9f504f5f8fac11c9",
+  "bugs": {
+    "url": "https://github.com/mercmobily/hotplate/issues"
+  },
+  "homepage": "https://github.com/mercmobily/hotplate#readme",
+  "_id": "hotplate@0.3.54",
+  "scripts": {},
+  "_shasum": "76c98dd637646a98be5d5c87fc090b7b090ac4f9",
+  "_from": "hotplate@>=0.3.0 <0.4.0"
 }
