Renamed hotCoreJsonRestStores into hotCoreStore

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "hotCoreAuth": "*",
     "hotCoreComet": "*",
     "hotCoreError": "*",
-    "hotCoreJsonRestStores": "*",
+    "hotCoreStore": "*",
     "hotCoreMultiHome": "*",
     "hotCoreServerLogger": "*",
     "hotCoreStoreConfig": "*",
@@ -54,7 +54,7 @@
     "hotCoreAuth",
     "hotCoreComet",
     "hotCoreError",
-    "hotCoreJsonRestStores",
+    "hotCoreStore",
     "hotCoreMultiHome",
     "hotCoreServerLogger",
     "hotCoreStoreConfig",
