--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.57",
+  "version": "0.3.58",
   "private": false,
   "repository": {
     "type": "git",
@@ -15,13 +15,10 @@
     "hotCoreComet": "*",
     "hotCoreError": "*",
     "hotCoreStore": "*",
+    "hotCoreStoreConfig": "*",
+    "hotCoreStoreLogger": "*",
     "hotCoreMultiHome": "*",
     "hotCoreServerLogger": "*",
-    "hotCoreStoreConfig": "*",
-    "hotCoreStoreExposer": "*",
-    "hotCoreStoreIndexer": "*",
-    "hotCoreStoreLogger": "*",
-    "hotCoreStoreRegistry": "*",
     "hotCoreTransport": "*",
     "eventemittercollector": "0.3.x",
     "allhttperrors": "0.3.x",
@@ -55,9 +52,10 @@
     "hotCoreComet",
     "hotCoreError",
     "hotCoreStore",
+    "hotCoreStoreConfig",
+    "hotCoreStoreLogger",
     "hotCoreMultiHome",
     "hotCoreServerLogger",
-    "hotCoreStoreConfig",
     "hotCoreStoreExposer",
     "hotCoreStoreIndexer",
     "hotCoreStoreLogger",
