--- a/package.json
+++ b/package.json
@@ -2,14 +2,35 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.71",
+  "version": "0.3.50",
   "private": false,
   "repository": {
     "type": "git",
     "url": "git://github.com/mercmobily/hotplate.git"
   },
-
   "dependencies": {
+    "hotCore": "*",
+    "hotCoreAuth": "*",
+    "hotCoreClientFiles": "*",
+    "hotCoreComet": "*",
+    "hotCoreCommonValidators": "*",
+    "hotCoreError": "*",
+    "hotCoreErrorProtocol": "*",
+    "hotCoreHandyCss": "*",
+    "hotCoreJsonRestStores": "*",
+    "hotCoreMultiHome": "*",
+    "hotCorePage": "*",
+    "hotCoreServerLogger": "*",
+    "hotCoreSharedCode": "*",
+    "hotCoreSharedValidators": "*",
+    "hotCoreStoreConfig": "*",
+    "hotCoreStoreExposer": "*",
+    "hotCoreStoreIndexer": "*",
+    "hotCoreStoreLogger": "*",
+    "hotCoreStoreRegistry": "*",
+    "hotCoreStoreVars": "*",
+    "hotCoreTransport": "*",
+    "hotClientDojo": "*",
     "eventemittercollector": "0.3.x",
     "allhttperrors": "0.3.x",
     "jsonreststores": "0.3.x",
@@ -17,26 +38,47 @@
     "simpleschema": "0.3.x",
     "simpledblayer": "0.3.x",
     "deepobject": "0.3.x",
-    "async": "~1.5.2",
-    "tracer": "~0.8.3",
-    "debug": "~2.2.0",
+    "async": "~0.9.0",
+    "tracer": "~0.7.3",
+    "debug": "~2.1.2",
     "email-addresses": "~2.0.1",
-    "passport": "~0.3.2",
+    "passport": "~0.2.1",
     "passport-local": "~1.0.0",
-    "passport-facebook": "~2.1.0",
+    "passport-facebook": "~2.0.0",
     "hat": "~0.0.3",
-    "bcrypt": "~0.8.1",
+    "bcrypt": "~0.8.5",
     "send": "~0.13.2",
-    "twilio": "~2.9.0",
-    "nodemailer": "~2.3.0",
+    "twilio": "~1.11.1",
+    "nodemailer": "~1.3.2",
     "imap": "~0.8.14",
-    "request": "~2.69.0",
+    "request": "~2.53.0",
     "sanitize-caja": "~0.1.2",
-    "html-to-text": "~2.0.0",
+    "html-to-text": "~1.2.1",
     "mimelib": "~0.2.19",
-    "base64-stream": "~0.1.2"
+    "base64-stream":"~0.1.2"
   },
-  "bugs": {
-    "url": "https://github.com/mercmobily/hotplate/issues"
-  }
+  "bundleDependencies": [
+    "hotCore",
+    "hotCoreAuth",
+    "hotCoreClientFiles",
+    "hotCoreComet",
+    "hotCoreCommonValidators",
+    "hotCoreError",
+    "hotCoreErrorProtocol",
+    "hotCoreHandyCss",
+    "hotCoreJsonRestStores",
+    "hotCoreMultiHome",
+    "hotCorePage",
+    "hotCoreServerLogger",
+    "hotCoreSharedCode",
+    "hotCoreSharedValidators",
+    "hotCoreStoreConfig",
+    "hotCoreStoreExposer",
+    "hotCoreStoreIndexer",
+    "hotCoreStoreLogger",
+    "hotCoreStoreRegistry",
+    "hotCoreStoreVars",
+    "hotCoreTransport",
+    "hotClientDojo"
+  ]
 }
