Rewrite of hotCoreComet

--- a/package.json
+++ b/package.json
@@ -2,37 +2,44 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.77",
+  "version": "0.3.78",
   "private": false,
   "repository": {
     "type": "git",
     "url": "git://github.com/mercmobily/hotplate.git"
   },
   "dependencies": {
-    "eventemittercollector": "0.3.x",
     "allhttperrors": "0.3.x",
-    "jsonreststores": "0.3.x",
-    "simpledeclare": "0.3.x",
-    "simpleschema": "0.3.x",
-    "simpledblayer": "0.3.x",
-    "deepobject": "0.3.x",
     "async": "~0.9.0",
-    "tracer": "~0.7.3",
-    "debug": "~2.1.2",
-    "email-addresses": "~2.0.1",
-    "passport": "~0.2.1",
-    "passport-local": "~1.0.0",
-    "passport-facebook": "~2.0.0",
-    "hat": "~0.0.3",
+    "base64-stream": "~0.1.2",
     "bcrypt": "~0.8.5",
-    "send": "~0.13.2",
-    "twilio": "~1.11.1",
-    "nodemailer": "~1.3.2",
+    "bufferutil": "^1.3.0",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.2",
+    "debug": "~2.1.2",
+    "deepobject": "0.3.x",
+    "email-addresses": "~2.0.1",
+    "eventemittercollector": "0.3.x",
+    "hat": "~0.0.3",
+    "html-to-text": "~1.2.1",
     "imap": "~0.8.14",
+    "jsonreststores": "0.3.x",
+    "keygrip": "^1.0.1",
+    "mimelib": "~0.2.19",
+    "nodemailer": "~1.3.2",
+    "passport": "~0.2.1",
+    "passport-facebook": "~2.0.0",
+    "passport-local": "~1.0.0",
+    "primus": "^6.0.6",
     "request": "~2.53.0",
     "sanitize-caja": "~0.1.2",
-    "html-to-text": "~1.2.1",
-    "mimelib": "~0.2.19",
-    "base64-stream":"~0.1.2"
+    "send": "~0.13.2",
+    "simpledblayer": "0.3.x",
+    "simpledeclare": "0.3.x",
+    "simpleschema": "0.3.x",
+    "tracer": "~0.7.3",
+    "twilio": "~1.11.1",
+    "utf-8-validate": "^2.0.0",
+    "ws": "^1.1.1"
   }
 }
