--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotplate",
   "description": "Hotplate SaaS development framework",
   "main": "./hotplate.js",
-  "version": "0.3.104",
+  "version": "0.3.105",
   "private": false,
   "repository": {
     "type": "git",
@@ -10,36 +10,35 @@
   },
   "dependencies": {
     "allhttperrors": "0.3.x",
-    "async": "~0.9.0",
+    "async": "~2.1.5",
     "base64-stream": "~0.1.2",
-    "bcrypt": "~0.8.5",
-    "bufferutil": "^1.3.0",
+    "bcrypt": "~1.0.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.2",
-    "debug": "~2.1.2",
+    "debug": "~2.6.1",
     "deepobject": "0.3.x",
     "email-addresses": "~2.0.1",
     "eventemittercollector": "0.3.x",
     "hat": "~0.0.3",
-    "html-to-text": "~1.2.1",
+    "html-to-text": "~3.2.0",
     "imap": "~0.8.14",
     "jsonreststores": "0.3.x",
     "keygrip": "^1.0.1",
-    "mimelib": "~0.2.19",
-    "nodemailer": "~1.3.2",
-    "passport": "~0.2.1",
-    "passport-facebook": "~2.0.0",
+    "mimelib": "~0.3.0",
+    "nodemailer": "~3.1.5",
+    "passport": "~0.3.2",
+    "passport-facebook": "~2.1.1",
     "passport-local": "~1.0.0",
     "primus": "^6.0.6",
-    "request": "~2.53.0",
-    "sanitize-caja": "~0.1.2",
-    "send": "~0.13.2",
+    "request": "~2.81.0",
+    "sanitize-caja": "~0.1.4",
+    "send": "~0.15.1",
     "simpledblayer": "0.3.x",
     "simpledeclare": "0.3.x",
     "simpleschema": "0.3.x",
-    "tracer": "~0.7.3",
-    "twilio": "~1.11.1",
-    "utf-8-validate": "^2.0.0",
-    "ws": "^1.1.1"
+    "tracer": "~0.8.7",
+    "twilio": "~2.11.1",
+    "utf-8-validate": "~3.0.1",
+    "ws": "^2.2.0"
   }
 }
