--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git://github.com/mercmobily/hotplate.git"
+    "url": "git://github.com/mobily-enterprises/hotplate.git"
   },
   "dependencies": {
     "@mapbox/sanitize-caja": "~0.1.4",
