--- a/packages/js-kit-base/package.json
+++ b/packages/js-kit-base/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "js-kit base package",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall" : "scripts/install.js"
   },
   "author": "Tony Mobily",
   "license": "ISC"
