--- a/packages/js-kit-server-stores/package.json
+++ b/packages/js-kit-server-stores/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "js-kit server stores",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall" : "scripts/install.js"
   },
-  "author": "Tony Mobilyyyyyyyyyyyy",
+  "author": "Tony Mobily",
   "license": "ISC",
   "dependencies": {
     "js-kit-base": "file:../js-kit-base"
