--- a/packages/js-kit-base/package.json
+++ b/packages/js-kit-base/package.json
@@ -7,5 +7,8 @@
     "postinstall" : "scripts/postinstall.js"
   },
   "author": "Tony Mobily",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lit-element": "^2.3.1"
+  }
 }
