--- a/packages/js-kit-base/package.json
+++ b/packages/js-kit-base/package.json
@@ -4,7 +4,7 @@
   "description": "js-kit base package",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall" : "scripts/postinstall.js"
+    "postinstall" : "scripts/postinstall.sh"
   },
   "author": "Tony Mobily",
   "license": "ISC",
