--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "pkg-up": "^3.1.0",
     "recursive-copy": "^2.0.10",
-    "replace-in-file": "^6.1.0"
+    "replace-in-file": "^6.1.0",
+    "get-value": "^3.0.1",
+    "set-value": "^3.0.2",
+    "unset-value": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
