--- a/modules/server/distr/server/package.json
+++ b/modules/server/distr/server/package.json
@@ -8,17 +8,15 @@
     "node": "10.x.x"
   },
   "dependencies": {
+    "allhttperrors": "^0.4.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
+    "es-dev-server": "^1.57.2",
     "express": "^4.17.1",
-    "express-mysql-session": "^2.1.3",
-    "express-session": "^1.16.1",
     "jsonreststores": "^2.x.x",
-    "jsonreststores-mysql": "^2.x.x",
-    "mime": "^2.4.5",
+    "koa": "^2.13.0",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1",
     "original-url": "^1.2.3"
   }
 }
