--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "description": "JS Kit repository",
   "version": "0.0.7",
   "repository": "mobily-enterprises/js-kit",
-  "forScaffoldizer": true
+  "forScaffoldizer": true,
+  "dependencies": {
+    "escape-string-regexp": "^4.0.0"
+  }
 }
