--- a/modules/server-stores/module.json5
+++ b/modules/server-stores/module.json5
@@ -23,14 +23,14 @@
                "op":"insert",
                "position":"before",
                "newlineAfter":true,
-               "anchorPoint":"// Global (installed) modules -- end",
+               "anchorPoint":"/* Loaded modules -- end */",
                "value":"const JsonRestStores = require('jsonreststores')"
             },
             {
                "op":"insert",
                "position":"before",
                "newlineAfter":true,
-               "anchorPoint":"/* ### ROUTES -- end ### */",
+               "anchorPoint":"/* App routes -- end */",
                "value":"// Automatically include all stores in stores/2.0 and listen to them all\nJsonRestStores.requireStoresFromPath(path.join(__dirname, 'stores/1.0'), app)\n"
             }
          ]
