Example page added

--- a/modules/client-app-frame/module.json5
+++ b/modules/client-app-frame/module.json5
@@ -72,6 +72,11 @@
           "op":"resolve-ejs"
         }
       ],
+      "src/<%=vars.elPrefix%>-example.js":[
+        {
+          "op":"resolve-ejs"
+        }
+      ],
       "src/base/PageElementMixin.js":[
         {
           "op":"resolve-ejs"
