Renamed "example" into "landing"

--- a/modules/client-app-frame/module.json5
+++ b/modules/client-app-frame/module.json5
@@ -72,7 +72,7 @@
           "op":"resolve-ejs"
         }
       ],
-      "src/<%=vars.elPrefix%>-example.js":[
+      "src/<%=vars.elPrefix%>-landing.js":[
         {
           "op":"resolve-ejs"
         }
