General linting and fixing

--- a/modules/client-app-frame/module.json5
+++ b/modules/client-app-frame/module.json5
@@ -110,6 +110,7 @@
         },
         {
           "op":"insert",
+          "newlineBefore":true,
           "position":"before",
           "anchorPoint":"/* App methods -- end */",
           "valueFromFile":"methods.js"
