Changed postinstall script to work on Windows

--- a/modules/server-base/module.json5
+++ b/modules/server-base/module.json5
@@ -30,7 +30,7 @@
             {
                "op":"set",
                "key":"scripts.postinstall",
-               "value":"cd server; npm install"
+               "value":"cd server && npm install"
             }
          ]
       },
