--- a/modules/client-app-element/module.json5
+++ b/modules/client-app-element/module.json5
@@ -10,7 +10,7 @@
   "position": -1,
   "manipulate":{
     "text":{
-      "src/elements/<%=vars.newElementFullName%>.js":[
+      "src/elements/<%=vars.newElementInfo.name%>.js":[
         {
           "op":"resolve-ejs"
         },
