--- a/modules/client-app-add-page-tabs/module.json5
+++ b/modules/client-app-add-page-tabs/module.json5
@@ -7,5 +7,18 @@
   "moduleDependencies":[
     "client-app-frame"
   ],
+  "manipulate":{
+    "text":{
+      "<%=userInput['client-app-add-page-tabs'].destination.file%>":[
+        {
+           "op":"insert",
+           "position":"after",
+           "newlineAfter":true,
+           "anchorPoint":"<!-- Element insertion point -->",
+           "valueFromFile":"page-tabs.js"
+        }
+      ]
+    }
+  },
   "position": -1,
 }
