--- a/modules/client-app-element/module.json5
+++ b/modules/client-app-element/module.json5
@@ -14,6 +14,34 @@
         {
           "op":"resolve-ejs"
         },
+      ],
+      "<%=vars.newElementInfo.destination.file%>":[
+        {
+          "if": "<%=vars.newElementInfo.placeElement%>",
+          "op": "insert",
+          "position": "after",
+          "newlineAfter": true,
+          "newlineBefore": false,
+          "anchorPoint": "<%-vars.newElementInfo.destination.anchorPoint%>",
+          "value":"<<%=vars.newElementInfo.name%> slot=\"content\"></<%=vars.newElementInfo.name%>>"
+        },
+        {
+          "if": "<%=vars.newElementInfo.placeElement%>",
+          "op": "insert",
+          "position": "before",
+          "newlineAfter": false,
+          "anchorPoint": "/* Loaded modules -- end */",
+          "value": "import '<%=vars.newElementInfo.importPath%>'"
+        },
+        {
+          "if": "<%=vars.newElementInfo.placeElement && vars.newElementInfo.destination.anchorPoint === '<!-- Element tab insertion point -->'%>",
+          "op": "insert",
+          "position": "after",
+          "newlineAfter": true,
+          "newlineBefore": false,
+          "anchorPoint": '<!-- Element tab heading insertion point -->',
+          "value":"<div tab-name=\"<%=vars.newElementInfo.name%>\"><%=utils.capitalize(vars.newElementInfo.nameNoPrefix)%></div>"
+        }
       ]
     }
   }
