--- a/modules/client-app-inner-page/module.json5
+++ b/modules/client-app-inner-page/module.json5
@@ -10,24 +10,21 @@
   "position": -1,
   "manipulate":{
     "text":{
-      "src/pages/<%=vars.newElementFullName%>.js":[
+      "<%=vars.newElementInfo.fullPath%>":[
         {
           "op":"resolve-ejs"
         },
       ],
-      // TODO
       "<%=vars.newElementInfo.parentElementPath%>":[
         {
-          // TODO
           "op": "insert",
           "position": "after",
           "newlineAfter": true,
           "newlineBefore": false,
-          "anchorPoint": "<%-vars.newElementInfo.destination.anchorPoint%>",
+          "anchorPoint": "<%-vars.newElementInfo.anchorPoint%>",
           "value":"<<%=vars.newElementInfo.name%> slot=\"content\"></<%=vars.newElementInfo.name%>>"
         },
         {
-          // TODO
           "op": "insert",
           "position": "before",
           "newlineAfter": false,
@@ -35,16 +32,14 @@
           "value": "import '<%=vars.newElementInfo.importPath%>'"
         },
         {
-          // TO CHECK
           "op": "insert",
           "position": "after",
           "newlineAfter": true,
           "newlineBefore": false,
           "anchorPoint": '<!-- Page tab heading insertion point -->',
-          "value":"<a name=\"<%=vars.newElementInfo.nameNoPrefix%>\" href=\"${window.location.pathname}<%=vars.newElementInfo.subPath\"><div><%=vars.newElementInfo.title%>%></div></a>"
+          "value":"<a name=\"<%=vars.newElementInfo.nameNoPrefix%>\" href=\"${window.location.pathname}<%=vars.newElementInfo.subPath%>\"><div><%=vars.newElementInfo.title%>%></div></a>"
         }
       ]
-    }
     }
   }
 }
